# rome-evm

./: Cargo.toml  Makefile  README.md
.github/workflows/: build_and_push.yaml  ci.yaml  ci_pub.yaml
ci/: Builder.Dockerfile  Dockerfile  TestValidator.Dockerfile  build.sh  deploy.sh  docker-compose.yml  initialize.sh  start_solana.sh
ci/cfg/: proxy-config.yml
ci/proxy/: proxy_config.yaml
emulator/: Cargo.toml
emulator/src/: allocate.rs  alt_program.rs  entrypoint.rs  lib.rs  origin.rs  state.rs  stubs.rs  vm_eth_call.rs
emulator/src/api/: alt_alloc.rs  alt_dealloc.rs  confirm_tx_iterative.rs  create_balance.rs  deposit.rs  do_tx.rs  do_tx_holder.rs  do_tx_holder_iterative.rs  do_tx_iterative.rs  eth_call.rs  eth_estimate_gas.rs  eth_get_balance.rs  eth_get_code.rs  eth_get_storage_at.rs  eth_get_tx_count.rs  get_alt.rs  get_rollups.rs  mod.rs  reg_owner.rs  reg_signer.rs  transmit_tx.rs
emulator/src/context/: atomic.rs  context_eth_call.rs  estimate_gas.rs  iterative.rs  iterative_lock.rs  mod.rs
initializer/: Cargo.toml
initializer/src/: init.rs  main.rs  params.rs
program/: Cargo.toml
program/src/: alloc.rs  assert.rs  config.rs  entrypoint.rs  error.rs  lib.rs
program/src/accounts/: account_state.rs  account_type.rs  address_table.rs  alt_id.rs  alt_slots.rs  code.rs  holder.rs  lock.rs  mod.rs  owner_info.rs  ro_lock.rs  signer_info.rs  slot.rs  state_holder.rs  storage.rs  tx_holder.rs  valids.rs  ver.rs
program/src/api/: alt_alloc.rs  alt_dealloc.rs  create_balance.rs  deposit.rs  do_tx.rs  do_tx_holder.rs  do_tx_holder_iterative.rs  do_tx_iterative.rs  mod.rs  reg_owner.rs  reg_signer.rs  transmit_tx.rs
program/src/context/: account_lock.rs  atomic.rs  iterative.rs  iterative_lock.rs  mod.rs
program/src/non_evm/: aspl_token.rs  aspl_token_ix.rs  aux.rs  mod.rs  non_evm_state.rs  spl_token.rs  spl_token_ix.rs  system.rs  system_ix.rs  withdraw.rs
program/src/precompile/: blake2f.rs  ecadd.rs  ecmul.rs  ecpairing.rs  ecrecover.rs  identity.rs  mod.rs  modexp.rs  ripemd_160.rs  sha2_256.rs
program/src/state/: allocate.rs  aux.rs  base.rs  handler.rs  info.rs  journal.rs  journaled_state.rs  mod.rs  origin.rs  pda.rs  state.rs
program/src/tx/: deposit.rs  eip1559.rs  eip2930.rs  legacy.rs  mod.rs  tx.rs
program/src/vm/: mod.rs  snapshot.rs  vm.rs  vm_atomic.rs  vm_eth_call.rs  vm_iterative.rs
solidity/: erc20spl.sol  interface.sol  shared.sol  wassociated_spl_token.sol  wspl_token.sol  wsystem_program.sol
solidity/single_state/: access_control.sol  interface.sol  shared.sol  wassociated_spl_token.sol  wsystem_program.sol
