[workspace]

members = [
    "emulator",
    "program",
]
exclude = [
    "evm"
]
resolver = "2"

[workspace.dependencies]
thiserror = "1.0.58"

# solana
solana-client = "2.1.7"
solana-program = { version = "2.1.7", features = ["borsh"] }
solana-bn254 = { version = "2.1.7" }
spl-token = { version = "7.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "6.0.0", features = ["no-entrypoint"] }

hex = "0.4.3"
rlp = { version = "0.5.2", features = ["derive"] }
bincode = "1.3.1"
ripemd = "0.1"
borsh = { version = "1.5.3", features = ["derive", "unstable__schema"] }

# evm
evm = { git = "https://github.com/rome-labs/evm.git", branch = "master"}
